Adds reference source for images

--- a/contact.html
+++ b/contact.html
@@ -181,6 +181,7 @@
             <i class="fa fa-copyright"></i>
             Queen of Pastries 2022
         </p>
+        <p class="copyright">All images are taken from <a href="https://www.freepik.com/">Freepik</a></p>
 
     </footer>
     
