--- a/home.html
+++ b/home.html
@@ -262,6 +262,7 @@
             <i class="fa fa-copyright"></i>
             Queen of Pastries 2022
         </p>
+        <p class="copyright">All images are taken from <a href="https://www.freepik.com/">Freepik</a></p>
 
     </footer>
 
