--- a/about.html
+++ b/about.html
@@ -36,8 +36,6 @@
                 <img class="logo" src="images/logo.png" alt="Queen of Pastries Shop">
             </div>
 
-
-            <!-- ----------------------- -->
             <!-- Create a hamburger menu for mobile devices. 
              The menu icon is created using three <span> elements within a <label> element. When the user clicks on the label, the checkbox is toggled and the <ul> element containing the menu items is displayed or hidden using the :checked pseudo-class.-->
             <nav class="nav" role="navigation">
@@ -50,7 +48,7 @@
                 <ul class="nav-ul">
                     <!-- Link all nav items to respective pages -->
                     <li class="nav-li"><a href="home.html">Home</a></li>
-                    <li class="nav-li"><a href="about.html">About Us</a></li>
+                    <li class="nav-li"><a id="current-page" href="about.html">About Us</a></li>
                     <li class="nav-li"><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
@@ -175,11 +173,11 @@
                 </ul>
             </div>
 
-            <div class="ig-icon">
+            <div class="social-icons ig-icon">
                 <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
             </div>
 
-            <div class="fb-icon">
+            <div class="social-icons fb-icon">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-square"></i></a>
             </div>
         </div>
